--- a/bloodmallet/general_website/templates/general_website/index.html
+++ b/bloodmallet/general_website/templates/general_website/index.html
@@ -53,56 +53,70 @@ are an entry point. For indepth information about your spec use your theorycraft
 </div>
 
 {# Chart manipulators / options #}
-<div class="container-fluid" hidden>
+<div id="chart_options" hidden>
     <div class="row">
-        <span>General Data Type:</span>
-        <button class="btn-data btn-secondary translate_trinkets" id="show_trinkets_data">Trinkets</button>
-        <button class="btn-data btn-secondary translate_azerite_traits" id="show_azerite_traits_data">Azerite</button>
-        <button class="btn-data btn-secondary translate_races" id="show_races_data">Races</button>
-        <button class="btn-data btn-secondary translate_secondary_distributions" id="show_secondary_distributions_data">Secondary distributions</button>
+        <div class="col-md-6">
+            <label class="btn-data-label" for="options_data_type">Data Type</label>
+            <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</button>
+            <div class="dropdown-menu" id="options_data_type">
+                <a class="dropdown-item" >Trinkets</a>
+                <a class="dropdown-item" >Azerite</a>
+                <a class="dropdown-item" >Races</a>
+                <a class="dropdown-item" >Secondary distributions</a>
+            </div>
+
+             {% comment %} <select class="form-control btn-data" id="options_data_type">
+                <option value="trinkets">Trinkets</option>
+                <option value="azerite">Azerite</option>
+                <option value="races">Races</option>
+                <option value="secondary_distributions">Secondary distributions</option>
+            </select> {% endcomment %}
+        </div>
+        <div class="col-md-6">
+            <label class="btn-data-label" for="fight_style">Fight Style</label>
+            <select class="form-control btn-data" id="fight_style">
+                <option value="patchwerk">Patchwerk</option>
+                <option value="hecticaddcleave">HecticAddCleave</option>
+            </select>
+        </div>
     </div>
-    <div class="row d-flex justify-content-center">
-        <span hidden>Specific Data Type:</span>
-        <button class="btn-data btn-secondary translate_trait_stacking" id="chart_type_trait_stacking"
-        hidden>Trait stacking</button>
-        <button class="btn-data btn-secondary translate_itemlevel" id="chart_type_itemlevel"
-        hidden>Itemlevel</button>
-        <button class="btn-data btn-secondary translate_head" id="chart_type_head"  hidden>Head</button>
-        <button class="btn-data translate_shoulders" id="chart_type_shoulders"
-        hidden>Shoulders</button>
-        <button class="btn-data btn-secondary translate_chest" id="chart_type_chest"  hidden>Chest</button>
-    </div>
-    <div class="row d-flex justify-content-center">
-        <span>Fight Style:</span>
-        <button class="btn-data btn-secondary translate_patchwerk" id="fight_style_patchwerk" >Patchwerk</button>
-        <!-- <button class="btn-data translate_beastlord" id="fight_style_beastlord" style="margin-right: 0.6rem;">Beastlord</button> -->
-        <button class="btn-data btn-secondary translate_hecticaddcleave" id="fight_style_hecticaddcleave" >HecticAddCleave</button>
-    </div>
-    <div class="row d-flex justify-content-center">
-        <label id="talent_selector_label" for="talent_combination_selector translate_talent_combination" style="margin-top: 0.6rem; padding-top: 9px; margin-right: 0.6rem;" hidden>Talent combination: </label>
-        <select class="btn-data" id="talent_combination_selector"  hidden></select>
-    </div>
-    <div class="row d-flex justify-content-center">
-        <button class="btn-data btn-secondary" id="azerite_traits_tier_3"  hidden>
+    <br/>
+    <div class="row">
+        <div class="col-md-6">
+            <label class="btn-data-label" for="options_data_specification">Type Specification</label>
+            <select class="form-control btn-data dropdown-toggle" id="options_data_specification">
+                <option value="trait_stacking">Trait stacking</option>
+                <option value="itemlevel">Itemlevel</option>
+                <option value="head">Head</option>
+                <option value="shoulders">Shoulders</option>
+                <option value="chest">Chest</option>
+            </select>
+        </div>
+        <div class="col-md-6">
+            <label class="btn-data-label" for="tier">Azerite Tier
             <svg class="tier-icon">
-                <use xlink:href="assets/icons.svg#azerite_tier1"></use>
+                <use xlink:href="{% static 'general_website/assets/icons.svg' %}#azerite_tier3" id="tier_icon"></use>
             </svg>
-            <span class="translate_tier_3">Tier 3 & 4</span>
-        </button>
-        <button class="btn-data btn-secondary" id="azerite_traits_tier_2"  hidden>
-            <svg class="tier-icon">
-                <use xlink:href="assets/icons.svg#azerite_tier2"></use>
-            </svg>
-            <span class="translate_tier_2">Tier 2</span>
-        </button>
+            </label>
+            <select class="form-control btn-data" id="tier">
+                <option value="3">
+                Tier 3 & 4
+                </option>
+                <option value="2">Tier 2</option>
+            </select>
+        </div>
     </div>
-    <div class="row d-flex justify-content-center">
-        <button class="btn-data btn-secondary dropdown-toggle" type="button" data-toggle="collapse" data-target="#advanced_chart_options_area" aria-expanded="false" aria-controls="advanced_chart_options_area" id="advanced_chart_options_button" >
-        Advanced Options
-        </button>
+    <br/>
+    <div class="row">
+    <div class="col-md-6">
+            <button class="btn-data druid-menu-border" type="button" data-toggle="collapse" data-target="#advanced_chart_options_area" aria-expanded="false" aria-controls="advanced_chart_options_area" id="advanced_chart_options_button">
+            Show Advanced Options
+            </button>
+    </div>
+
     </div>
     <div class="row">
-        <div class="collapse" id="advanced_chart_options_area" style="margin-top: 0.6rem;">
+        <div class="collapse col-md-12" id="advanced_chart_options_area">
             <div class="card card-body" id="advanced_chart_options" >
             </div>
         </div>
@@ -112,4 +126,6 @@ are an entry point. For indepth information about your spec use your theorycraft
 
 <script src="{% static 'general_website/js/navbar_class_menu.js' %}"></script>
 <script src="{% static 'general_website/js/class_spec_table.js' %}"></script>
+<script src="{% static 'general_website/js/chart_options.js' %}"></script>
+<script src="{% static 'general_website/js/index.js' %}"></script>
 {% endblock %}
