unbreak "advanced options"

--- a/bloodmallet/general_website/templates/general_website/index.html
+++ b/bloodmallet/general_website/templates/general_website/index.html
@@ -95,8 +95,9 @@ are an entry point. For indepth information about your spec use your theorycraft
             </select>
         </div>
         <div class="col-md-6 col-xl-4 bottom-spacer">
-            <button class="btn-data force-bottom druid-menu-border" type="button" data-toggle="collapse" data-target="#advanced_chart_options_area" aria-expanded="false" aria-controls="advanced_chart_options_area" id="advanced_chart_options_button">
-            Show Advanced Options
+            <label class="btn-data-label" for="advanced_chart_options_button">Advanced Options</label>
+            <button class="btn-data form-control druid-menu-border" type="button" data-toggle="collapse" data-target="#advanced_chart_options_area" aria-expanded="false" aria-controls="advanced_chart_options_area" id="advanced_chart_options_button">
+            Show
             </button>
         </div>
     </div>
