--- a/bloodmallet/general_website/templates/general_website/index.html
+++ b/bloodmallet/general_website/templates/general_website/index.html
@@ -109,9 +109,13 @@ are an entry point. For indepth information about your spec use your theorycraft
     </div>
 </div>
 
+<div id="chart" hidden></div>
 
 <script src="{% static 'general_website/js/navbar_class_menu.js' %}"></script>
 <script src="{% static 'general_website/js/class_spec_table.js' %}"></script>
 <script src="{% static 'general_website/js/chart_options.js' %}"></script>
 <script src="{% static 'general_website/js/index.js' %}"></script>
+<script src="http://wow.zamimg.com/widgets/power.js"></script>
+<script src="https://code.highcharts.com/highcharts.js"></script>
+<script src="{% static 'general_website/js/bloodmallet_chart_import.js' %}"></script>
 {% endblock %}
