--- a/bloodmallet/general_website/templates/general_website/index.html
+++ b/bloodmallet/general_website/templates/general_website/index.html
@@ -114,8 +114,8 @@ are an entry point. For indepth information about your spec use your theorycraft
 <script src="{% static 'general_website/js/navbar_class_menu.js' %}"></script>
 <script src="{% static 'general_website/js/class_spec_table.js' %}"></script>
 <script src="{% static 'general_website/js/chart_options.js' %}"></script>
-<script src="{% static 'general_website/js/index.js' %}"></script>
-<script src="http://wow.zamimg.com/widgets/power.js"></script>
+<script src="https://wow.zamimg.com/widgets/power.js"></script>
 <script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="{% static 'general_website/js/bloodmallet_chart_import.js' %}"></script>
+<script src="{% static 'general_website/js/index.js' %}"></script>
 {% endblock %}
