--- a/bloodmallet/general_website/templates/general_website/layout_top_nav.html
+++ b/bloodmallet/general_website/templates/general_website/layout_top_nav.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 {% comment %} <header> {% endcomment %}
     <nav class="navbar sticky-top navbar-expand-lg bg-dark navbar-dark top-nav light-border-bottom">
         <a class="navbar-brand" href="{% url 'index' %}">
@@ -28,6 +29,9 @@
                     <a class="nav-link" href="{% url 'login' %}" id="navbarLogin">Login</a>
                     <a class="nav-link" href="{% url 'signup' %}" id="navbarSignup">Register</a>
                 {% endif %}
+                {% if request.user.is_authenticated and request.user.is_superuser %}
+                    <a class="nav-link" href="{% url 'admin:index' %}" id="navbarAdmin">Admin</a>
+                {% endif%}
                 <a class="nav-link" href="{% url 'settings' %}" id="navbarLogin">Settings</a>
                 {% if request.user.is_authenticated %}
                     <a class="nav-link" href="{% url 'logout' %}" id="navbarLogin">Logout</a>
