--- a/bloodmallet/general_website/templates/general_website/index.html
+++ b/bloodmallet/general_website/templates/general_website/index.html
@@ -1,4 +1,5 @@
 {% extends 'general_website/layout_base.html' %}
+{% load i18n %}
 {% load static %}
 {% load replace_underscore_with_space %}
 
@@ -16,6 +17,7 @@
             <ul class="navbar-nav">
 
                 {# create a list of all specs and autogenerate the standard links #}
+                {# will need to generate the list in the backend and provide proper translations #}
                 {% with "death_knight demon_hunter druid hunter mage monk paladin priest rogue shaman warlock warrior" as specs %}
                     {% for spec in specs.split %}
                         <li class="nav-item">
@@ -42,9 +44,9 @@
 {% endcomment %}
 
 <p id="translate_main_paragraph">
-This site provides an overview about trinkets, azerite traits, and others for almost all specs in World of Warcraft
+{% trans "This site provides an overview about trinkets, azerite traits, and others for almost all specs in World of Warcraft
 using <a href="http://www.simulationcraft.org/" target="blank">SimulationCraft</a>'s default profiles. These overviews
-are an entry point. For indepth information about your spec use your theorycrafters resources linked below the charts.
+are an entry point. For indepth information about your spec use your theorycrafters resources linked below the charts." %}
 </p>
 
 
@@ -56,48 +58,48 @@ are an entry point. For indepth information about your spec use your theorycraft
 <div id="chart_options" hidden>
     <div class="row">
         <div class="col-md-6 col-xl-4 bottom-spacer">
-            <label class="btn-data-label" for="data_type">Data Type</label>
+            <label class="btn-data-label" for="data_type">{% trans "Data Type" %}</label>
             <select class="form-control btn-data" id="data_type">
-                <option value="trinkets" selected>Trinkets</option>
-                <option value="azerite">Azerite</option>
-                <option value="races">Races</option>
+                <option value="trinkets" selected>{% trans "Trinkets" %}</option>
+                <option value="azerite">{% trans "Azerite" %}</option>
+                <option value="races">{% trans "Races" %}</option>
                 {% comment %} <option value="secondary_distributions">Secondary distributions</option> {% endcomment %}
             </select>
         </div>
         <div class="col-md-6 col-xl-4 bottom-spacer">
-            <label class="btn-data-label" for="fight_style">Fight Style</label>
+            <label class="btn-data-label" for="fight_style">{% trans "Fight Style" %}</label>
             <select class="form-control btn-data" id="fight_style">
-                <option value="patchwerk" selected>Patchwerk</option>
-                <option value="hecticaddcleave">HecticAddCleave</option>
+                <option value="patchwerk" selected>{% trans "Patchwerk" %}</option>
+                <option value="hecticaddcleave">{% trans "HecticAddCleave" %}</option>
             </select>
         </div>
         <div class="col-md-6 col-xl-4 bottom-spacer">
-            <label class="btn-data-label" for="data_specification">Type Specification</label>
+            <label class="btn-data-label" for="data_specification">{% trans "Type Specification" %}</label>
             <select class="form-control btn-data dropdown-toggle" id="data_specification">
-                <option value="trait_stacking" selected>Trait stacking</option>
-                <option value="itemlevel">Itemlevel</option>
-                <option value="head">Head</option>
-                <option value="shoulders">Shoulders</option>
-                <option value="chest">Chest</option>
+                <option value="trait_stacking" selected>{% trans "Trait stacking" %}</option>
+                <option value="itemlevel">{% trans "Itemlevel" %}</option>
+                <option value="head">{% trans "Head" %}</option>
+                <option value="shoulders">{% trans "Shoulders" %}</option>
+                <option value="chest">{% trans "Chest" %}</option>
             </select>
         </div>
         <div class="col-md-6 col-xl-4 bottom-spacer">
-            <label class="btn-data-label" for="tier">Azerite Tier
+            <label class="btn-data-label" for="tier">{% trans "Azerite Tier" %}
             <svg class="tier-icon">
                 <use xlink:href="{% static 'general_website/assets/icons.svg' %}#azerite_tier3" id="tier_icon"></use>
             </svg>
             </label>
             <select class="form-control btn-data" id="tier">
                 <option value="3" selected>
-                Tier 3 & 4
+                {% trans "Tier 3 & 4" %}
                 </option>
-                <option value="2">Tier 2</option>
+                <option value="2">{% trans "Tier 2" %}</option>
             </select>
         </div>
         <div class="col-md-6 col-xl-4 bottom-spacer">
-            <label class="btn-data-label" for="advanced_chart_options_button">Advanced Options</label>
+            <label class="btn-data-label" for="advanced_chart_options_button">{% trans "Advanced Options" %}</label>
             <button class="btn-data form-control druid-menu-border" type="button" data-toggle="collapse" data-target="#advanced_chart_options_area" aria-expanded="false" aria-controls="advanced_chart_options_area" id="advanced_chart_options_button">
-            Show
+            {% trans "Show" %}
             </button>
         </div>
     </div>
