--- a/bloodmallet/general_website/templates/general_website/layout_head.html
+++ b/bloodmallet/general_website/templates/general_website/layout_head.html
@@ -1,9 +1,10 @@
+{% load i18n %}
 {% load sass_tags %}
 {% load static %}
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>bloodmallet - data for all</title>
+    <title>bloodmallet - {% trans "data for all" %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="{% static 'general_website/css/bootstrap.min.css' %}" />
     <link rel="stylesheet" type="text/css" media="screen" href="{% sass_src 'general_website/css/base.scss' %}" />
