--- a/bloodmallet/general_website/templates/general_website/layout_settings_nav.html
+++ b/bloodmallet/general_website/templates/general_website/layout_settings_nav.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 {% if page %}
     <nav class="navbar sticky-top navbar-expand-md bg-dark navbar-dark" id="navBarDataMenu" style="top:60px;">
         <!-- Menu button if device is too small for full menu -->
@@ -7,24 +8,24 @@
         </button>
         <!-- Menu list -->
         <div class="collapse navbar-collapse" id="navbarSecondaryMenu">
-            <!-- Wow classes -->
+            <!-- Settings -->
             <ul class="navbar-nav">
 
-                <li class="navbar-text priest-color">Settings:</li>
+                <li class="navbar-text priest-color">{% trans "Settings" %}:</li>
                 <li class="nav-item">
-                    <a class="nav-link priest-color priest-menu-border{% if page == 'settings' %} active{% endif %}" href="{% url 'settings' %}">General</a>
+                    <a class="nav-link priest-color priest-menu-border{% if page == 'settings' %} active{% endif %}" href="{% url 'settings' %}">{% trans "General" %}</a>
                 </li>
 
                 {# Logged in user menu #}
                 {% if request.user.is_authenticated %}
                 <li class="navbar-text priest-color navbar-spacer">|</li>
                 <li class="nav-item">
-                    <a class="nav-link priest-color priest-menu-border{% if page == 'profile' %} active{% endif %}" href="{% url 'profile' %}">Profile</a>
+                    <a class="nav-link priest-color priest-menu-border{% if page == 'profile' %} active{% endif %}" href="{% url 'profile' %}">{% trans "Profile" %}</a>
                 </li>
 
                 <li class="navbar-text priest-color navbar-spacer">|</li>
                 <li class="nav-item">
-                    <a class="nav-link priest-color priest-menu-border{% if page == 'connections' %} active{% endif %}" href="{% url 'account_connections' %}">Connections</a>
+                    <a class="nav-link priest-color priest-menu-border{% if page == 'connections' %} active{% endif %}" href="{% url 'account_connections' %}">{% trans "Connections" %}</a>
                 </li>
                 {% endif %}
 
